--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "db:migrate:deploy": "tsx scripts/migrate.ts deploy",
     "db:migrate:deploy:force": "tsx scripts/migrate.ts deploy --force",
     "db:migrate:reset": "tsx scripts/migrate.ts reset --force",
+    "env:validate": "tsx scripts/validate-env.ts",
+    "env:check": "npm run env:validate",
+    "prebuild": "npm run env:validate",
+    "predev": "npm run env:validate",
     "db:migrate:check": "npx prisma migrate diff --from-empty --to-schema-datamodel prisma/schema.prisma",
     "db:backup": "echo 'Backup command depends on your database provider'",
     "db:restore": "echo 'Restore command depends on your database provider'"
@@ -64,12 +68,14 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/csrf": "^3.1.3",
     "@types/jest": "^30.0.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
     "caniuse-lite": "^1.0.30001733",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "csrf": "^3.1.0",
     "cypress": "^14.5.4",
     "embla-carousel-react": "^8.2.0",
     "eslint-plugin-jest-dom": "^5.5.0",
